<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.malarkey.glasgowcitycouncil.MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:visibility="gone"
        android:id="@+id/loggedInAs"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/comment_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logged in as: "
            android:textColor="@color/whiteText" />

        <TextView
            android:id="@+id/lblUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnLogout"
            android:textStyle="bold"
            android:text=" | Logout?"
            android:textColor="@color/whiteText" />



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_row_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnParks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/parkButton"
                    android:foreground="@drawable/parks_icon"
                    android:minHeight="@dimen/icon_size"
                    android:minWidth="@dimen/icon_size" />

                <TextView
                    android:id="@+id/lblParks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parkText"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/whiteText" />
            </LinearLayout>

            <!-- VERTICAL LINE FOR UI -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnCulture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/cultureButton"
                    android:foreground="@drawable/culture_icon"
                    android:minHeight="@dimen/icon_size"
                    android:minWidth="@dimen/icon_size" />

                <TextView
                    android:id="@+id/lblCulture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cultureText"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/whiteText" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_row_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnSport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/sportButton"
                    android:foreground="@drawable/sport_icon"
                    android:minHeight="@dimen/icon_size"
                    android:minWidth="@dimen/icon_size" />

                <TextView
                    android:id="@+id/lblSport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sportText"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/whiteText" />
            </LinearLayout>

            <!-- VERTICAL LINE FOR UI -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/eventsButton"
                    android:foreground="@drawable/calendar_icon"
                    android:minHeight="@dimen/icon_size"
                    android:minWidth="@dimen/icon_size" />

                <TextView
                    android:id="@+id/lblEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eventsText"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/whiteText" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/menu_row_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/topRatedButton"
                    android:foreground="@drawable/top_rated_icon"
                    android:minHeight="@dimen/icon_size"
                    android:minWidth="@dimen/icon_size" />

                <TextView
                    android:id="@+id/lblTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topRatedText"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/whiteText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/btnSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/settingsButton"
                    android:foreground="@drawable/settings_icon"
                    android:minHeight="@dimen/icon_size"
                    android:minWidth="@dimen/icon_size" />

                <TextView
                    android:id="@+id/lblSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsText"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/whiteText" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
